# joystick_f180

./: .gitignore  CMakeFiles.txt  CMakeLists.txt  Doxyfile  README.md  run.sh
arduino/Transmissor_IA_Com_Leitura_Serial/: Transmissor_IA_Com_Leitura_Serial.ino
config/: params.json
include/: lua_kernel.h  manual_control.h  parameters.h  serial_message.h  serial_sender.h  system.h
lib/joystick-master/: joystick.cc  test.cc
scripts/: config.lua
src/: lua_kernel.cc  lua_kernel.cpp  main.cpp  manual_control.cc  parameters.cc  serial_message.cc  serial_sender.cc  system.cc
